--- a/app/src/main/res/layout/activity_qr_scanner.xml
+++ b/app/src/main/res/layout/activity_qr_scanner.xml
@@ -10,8 +10,38 @@
         android:id="@+id/qr_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="qr_data"
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="227dp" />
+        android:text="QR Data"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.044" />
+
+    <TextView
+        android:id="@+id/label_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/qr_data" />
+
+    <TextView
+        android:id="@+id/issuer_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_text" />
+
+    <TextView
+        android:id="@+id/secret_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/issuer_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
