--- a/app/src/main/res/layout/fragment_enable_backups.xml
+++ b/app/src/main/res/layout/fragment_enable_backups.xml
@@ -32,10 +32,10 @@
 
         <!-- Login Button -->
         <Button
-            android:id="@+id/buttonLogin"
+            android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login" />
+            android:text="Register" />
 
     </LinearLayout>
     <TextView
