--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.totpapp.ui.gallery.GalleryFragment"
+        android:name="com.example.totpapp.ui.qr_scanner.QRScannerFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_qr_scanner" />
 
     <fragment
         android:id="@+id/nav_slideshow"
