--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -24,17 +24,17 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="22dp"
                 android:layout_height="20dp"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="44dp"
                 app:layout_constraintEnd_toEndOf="@+id/userTag"
-                app:layout_constraintHorizontal_bias="0.35"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/otp"
                 app:layout_constraintTop_toBottomOf="@+id/userTag"
                 app:layout_goneMarginBottom="10dp" />
 
             <TextView
                 android:id="@+id/otp"
-                android:layout_width="50dp"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="526362"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -47,11 +47,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="192dp"
+                android:layout_marginEnd="100dp"
                 android:layout_toEndOf="@+id/org"
                 android:text="username/email"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.214"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintRight_toLeftOf="@id/org"
                 app:layout_constraintStart_toEndOf="@+id/org"
                 app:layout_constraintTop_toTopOf="parent" />
